# gray-scott-sim

./: .gitignore  CMakeLists.txt  Dockerfile  GrayScottSimulation.cpp  GrayScottSimulation.h  Makefile  README.md  gs.cpp  gs.hpp  test.cpp  tests.cpp  tests_gs.cpp
.github/workflow/: automatic_testing.yml
.github/workflows/: automatic_testing.yml  build-test.yaml  docker-image.yml
